--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
-FLASK_APP=app.py
+FLASK_APP=entrypoint.py
 FLASK_ENV=development
-FLASK_DEBUG=1
-
-SECRET_KEY = "so-secret"
-SQLALCHEMY_DATABASE_URI = 'postgresql+psycopg2://postgres:!Soporte06@localhost:5432/edteamdb'
-SQLALCHEMY_TRACK_MODIFICATIONS = False
+# FLASK_DEBUG=1
+CONFIG_ENV=config.dev
